.history/infra/k8s/events-depl_20210225143008.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: events-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: events
  template: 
    metadata:
      labels:
        app: events
    spec: 
      containers:
        - name: events
          image: striver69/events
