.history/infra/k8s/posts_20210225021532.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers: 
    - name: posts
      image: striver69/posts:0.0.1
